kubernetes/petClinic/petclinic-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: petclinic
  name: petclinic
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: petclinic
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  minReadySeconds: 10
  template:
    metadata:
      labels:
        app: petclinic
    spec:
      terminationGracePeriodSeconds: 30
      securityContext:
        runAsUser: 1000
      tolerations:
        - key: node-role.kubernetes.io/master
          effect: NoSchedule
      containers:
        - image: stdev0617/petclinic
          imagePullPolicy: IfNotPresent
          name: petclinic
          ports:
            - containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            failureThreshold: 3
            periodSeconds: 10
          volumeMounts:
            - name: logs-volumes
              mountPath: /logs
      volumes:
        - name: logs-volumes
          emptyDir: {}
