kubernetes/petClinic/petclinic-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: petclinic-service
  namespace: default
  labels:
    app: petclinic-service
spec:
  type: ClusterIP
  ports:
    - name: api
      port: 8080
  selector:
    app: petclinic
