kubernetes/petClinic/petclinic-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: petclinic
  namespace: default
spec:
  rules:
    - host: petclinic.svc.me
      http:
        paths:
          - backend:
              serviceName: petclinic
              servicePort: 8080
